@@ -57,6 +57,7 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 - 03/08/2022
 35. added base/hexdump.c
 36. r_mkdir: skip chown if running as non-root
+37. makesalt.c: include stdint.h for uint32_t
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
